--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,6 +1,12 @@
 name: GitHub Actions Demo by Chris
 
 on:
+  workflow_dispatch:
+    inputs:
+      environment:
+        description: 'Environment to deploy to'
+        type: environment
+        required: true
   push:
     branches:  [  main  ]
     paths-ignore:  [.github/**]
