--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -1,1 +1,34 @@
+name:  Reusable workflow
 
+#Add a workflow_call trigger with an input parameter who-to-greet of the type string
+#that is required. Set the default value to World.
+on:
+  workflow_call:
+    inputs:
+      who-to-greet:
+        description: 'The person to greet'
+        type: string
+        required: true
+        default: World
+    #Add an output parameter called current-time to workflow_call 
+    #and set it to the outputs of the workflow command.
+    outputs:
+      current-time:
+        description: 'The time when greeting.'
+        value: ${{ jobs.reusable-job.outputs.current-time }}
+#Add a job named reusable-job that runs on ubuntu-latest that echos "Hello " to the console.
+jobs:
+  reusable-job:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Greet someone
+        run: echo "Hello ${{ inputs.who-to-greet }}"
+      #Add an additional step with the id time that uses a workflow command 
+      #to set an output parameter named current-time to the current date and time (use $(date) for that).
+      - name: Set time
+        id: time
+        run: echo "time=$(date)" >> $GITHUB_OUTPUT
+    #Add an output called current-time to the reusable-job.
+    outputs:
+      current-time: ${{ steps.time.outputs.time }}
+    
